--- a/guess.html
+++ b/guess.html
@@ -1,55 +1,10 @@
-<!DOCTYPE html>
+<!<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Guess the Number Game</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            height: 100vh;
-            background-color: #f4f4f9;
-            margin: 0;
-        }
-
-        .game-container {
-            text-align: center;
-            padding: 20px;
-            background-color: white;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-        }
-
-        input[type="number"] {
-            padding: 10px;
-            width: 50%;
-            margin-bottom: 10px;
-            font-size: 16px;
-        }
-
-        button {
-            padding: 10px 20px;
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            cursor: pointer;
-            border-radius: 5px;
-            font-size: 16px;
-        }
-
-        button:hover {
-            background-color: #45a049;
-        }
-
-        .message {
-            margin-top: 20px;
-            font-size: 18px;
-            font-weight: bold;
-        }
-    </style>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
@@ -61,28 +16,6 @@
     <div class="message" id="message"></div>
 </div>
 
-<script>
-    const randomNumber = Math.floor(Math.random() * 100) + 1;
-    let attempts = 0;
-
-    function checkGuess() {
-        const userGuess = parseInt(document.getElementById("userGuess").value);
-        const message = document.getElementById("message");
-        attempts++;
-
-        if (isNaN(userGuess)) {
-            message.textContent = "Please enter a valid number!";
-        } else if (userGuess < 1 || userGuess > 100) {
-            message.textContent = "Please guess a number between 1 and 100!";
-        } else if (userGuess < randomNumber) {
-            message.textContent = "Too low! Try again.";
-        } else if (userGuess > randomNumber) {
-            message.textContent = "Too high! Try again.";
-        } else {
-            message.textContent = `Congratulations! You guessed the number in ${attempts} attempts.`;
-        }
-    }
-</script>
-
+<script src="script.js"></script>
 </body>
 </html>
